# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "columnar_transposition_cipher"
description = "An idiomatic implementation of a popular historical encryption method."
authors = ["James Nash <https://github.com/NashJames/>"]
rust-version = "1.66"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
clap =  { version = "4.0", features = ["derive"] }
rand = "0.8"
regex = "1.7"
